# OhmtalAxe

./: CMakeLists.txt  Makefile  README.md
OhmtalAxe/: createIcon.sh
OhmtalAxe/assets/: Factory.axe
OhmtalAxe/src/: appGlobals.h  appGui.cpp  appGui.h  appMain.h  main.cpp
OhmtalAxe/src/modules/: drumKitLooper.cpp  drumKitLooper.h  inputModule.cpp  inputModule.h  keyboardModule.cpp  keyboardModule.h  rackModule.cpp  rackModule.h  soundMixModule.cpp  soundMixModule.h  waveModule.h
